[package]
authors = ["bwinter"]
description = "A hashlips inspired NFT image + metadata generator for Ethereum and Solana, written completely in Rust."
documentation = "https://docs.rs/nft_image_and_metadata_generator/0.1.0/nft_image_and_metadata_generator/"
edition = "2021"
license = "MIT"
name = "nft_image_and_metadata_generator"
repository = "https://github.com/bwintertkb/nft_image_and_metadata_generator.git"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.0"
json = "0.12.4"
rand = "0.8.5"
regex = "1"
sha256 = "1.0.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
